# lybot

./: .gitignore  CLAUDE.md  Makefile  README.md  api.py  example_client.py  main.py  models.py  patch.py  pyproject.toml  requirements.txt  run_api.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
frontend/: README.md  index.html  package-lock.json  package.json  run_frontend.sh  table-test.md  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatInterface.tsx  DisclaimerDialog.tsx  ToolCallDisplay.tsx
frontend/src/components/ui/: scroll-area.tsx
frontend/src/lib/: api.ts  types.ts  utils.ts
patches/: __init__.py  pydantic_ai_stream_patch.py
prompts/: __init__.py
tools/: __init__.py  analysis.py  bills.py  gazettes.py  interpellations.py  legislators.py  meetings.py
utils/: __init__.py  analytics.py  constituency_mapper.py  token_utils.py
