[project]
name = "lybot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clai>=0.3.4",
    "httpx>=0.28.1",
    "ipython>=9.3.0",
    "loguru>=0.7.3",
    "markitdown[pdf]>=0.1.2",
    "pydantic-ai==0.4.2",
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.1",
    "python-multipart>=0.0.17",
    "sse-starlette>=2.1.3",
    "ruff>=0.12.2",
    "pyright>=1.1.402",
    "posthog>=6.1.0",
    "tiktoken>=0.9.0",
    "pydantic-ai-slim[google]>=0.4.2",
]
